[metadata]
name = lob-transformer
version = 0.1.0
author = Yuto Hayashi
url = https://github.com/YutoHayashi/lob-transformer
licence = MIT

[options]
packages = 
    lob_transformer
python_requires = ==3.11.*
include_package_data = True
install_requires =
    lightning
    numpy<2
    pandas
    python-dotenv
    pytorch-forecasting
    scikit-learn
    torch

[options.package_data]
lob_transformer = presets.json

[options.entry_points]
console_scripts =
    train-transformer = lob_transformer.module:main